--- a/Notes2022/Client/wwwroot/index.html
+++ b/Notes2022/Client/wwwroot/index.html
@@ -1,3 +1,17 @@
+// ***********************************************************************
+// Assembly         : Notes2022.Client
+// Author           : sinde
+// Created          : 04-19-2022
+//
+// Last Modified By : sinde
+// Last Modified On : 04-30-2022
+// ***********************************************************************
+// <copyright file="index.html" company="Notes2022.Client">
+    //     Copyright (c) . All rights reserved.
+    //
+</copyright>
+// <summary></summary>
+// ***********************************************************************
 <!DOCTYPE html>
 <html lang="en">
 
