Update copyright info

--- a/Notes2022/Server/wwwroot/Import/Text/about.html
+++ b/Notes2022/Server/wwwroot/Import/Text/about.html
@@ -1,18 +1,4 @@
-﻿// ***********************************************************************
-// Assembly         : Notes2022.Server
-// Author           : sinde
-// Created          : 05-05-2022
-//
-// Last Modified By : sinde
-// Last Modified On : 05-05-2022
-// ***********************************************************************
-// <copyright file="about.html" company="Notes2022.Server">
-    //     Copyright (c) . All rights reserved.
-    //
-</copyright>
-// <summary></summary>
-// ***********************************************************************
-<h2>About Notes 2022</h2>
+﻿<h2>About Notes 2022</h2>
 <p>
     Notes 2022 is a set of forums inspired by the <a href="https://en.wikipedia.org/wiki/PLATO_%28computer_system%29" target="_blank">PLATO</a>
     (later known as NovaNET) communications system.
