--- a/Notes2022/Server/wwwroot/Import/Text/helpdialog.html
+++ b/Notes2022/Server/wwwroot/Import/Text/helpdialog.html
@@ -1,19 +1,4 @@
-﻿// ***********************************************************************
-// Assembly         : Notes2022.Server
-// Author           : sinde
-// Created          : 05-06-2022
-//
-// Last Modified By : sinde
-// Last Modified On : 05-06-2022
-// ***********************************************************************
-// <copyright file="helpdialog.html" company="Notes2022.Server">
-    //     Copyright (c) . All rights reserved.
-    //
-</copyright>
-// <summary></summary>
-// ***********************************************************************
-
-<h3>Note List Help</h3>
+﻿<h3>Note List Help</h3>
 <p>
     <b>L</b> - list of NoteFiles.<br />
     <b>N</b> - write a new base note.<br />
