Prep for reading local files

--- a/Notes2022/Client/wwwroot/index.html
+++ b/Notes2022/Client/wwwroot/index.html
@@ -26,6 +26,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Blazored.Modal/blazored.modal.js"></script>
+    <script src="_content/W8lessLabs.Blazor.LocalFiles/js/fileupload.js"></script>
 </body>
 
 </html>
